<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/title_pay"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_valor_da_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/valor_de_compra"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_do_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_da_compra"
        tools:text="R$ 240.90" />

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:hint="@string/cartao_credito"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_do_pacote" />


    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/mes"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_ano_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/ano"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@+id/pagamento_mes_cartao" />

    <EditText
        android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc"
        android:inputType="number"
        android:maxLength="3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_numero_cartao" />


    <EditText
        android:id="@id/pagamento_nome_do_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:digits="@string/mascara_para_cartao_de_credito"
        android:hint="@string/nome_cartao"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc_cartao" />

    <Button
        android:id="@+id/pagamento_button_finalizar_compra"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/button_pagamento"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_nome_do_cartao"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/pagamento_nome_do_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_do_cartao" />

</androidx.constraintlayout.widget.ConstraintLayout>